# triplate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release-please.yml
triplate-java/: README.md  pom.xml
triplate-py/: README.md  pyproject.toml
triplate-py/src/triplate/: __init__.py  _ast.py  _examples.py  _lexer.py  _parser.py  _registry.py  _renderer.py  _serializers.py  errors.py
triplate-py/tests/: test_api.py  test_conformance.py
triplate-ts/: README.md  package.json  tsconfig.json
triplate-ts/src/: ast.ts  errors.ts  examples.ts  index.ts  lexer.ts  parser.ts  renderer.ts
triplate-ts/src/types/: index.ts  serializers.ts
triplate-ts/test/: api.test.ts  conformance.test.ts  roundtrip.test.ts
triplate.dev/: astro.config.mjs  package.json
triplate.dev/public/: masthead.png.bak
triplate.dev/spec/: grammar.ebnf
triplate.dev/spec/conformance/: comments.json  conditionals.json  errors.json  interpolation.json  iri.json  loops.json  spread.json  substitution.json
triplate.dev/src/components/: PageTitle.astro
triplate.dev/src/content/docs/: index.md  index.mdx  installation.md  specification.md
triplate.dev/src/content/docs/language/: comments.md  loops.md  strings.md  substitutions.md
triplate.dev/src/content/docs/reference/: api.md  security.md
triplate.dev/src/styles/: custom.css
triplate.dev/syntax/: README.md  sample.triplate  triplate.injection.tmLanguage.json
triplate.dev/syntax/test/: grammar.test.mjs  sparql.stub.tmLanguage.json
(+21 files in other folders)
