[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triplate"
version = "0.3.0"
description = "A templating engine for SPARQL queries with typed, injection-safe placeholders and loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Triplate contributors" }]
keywords = ["sparql", "template", "rdf", "query", "injection-safe"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://triplate.dev"
Repository = "https://github.com/triplate/triplate"
Issues = "https://github.com/triplate/triplate/issues"

[project.optional-dependencies]
rdflib = ["rdflib>=6.0"]
dev = ["pytest>=8.0", "rdflib>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/triplate"]
